Regression test suite for the 3 miniapp recipes - cmake integration and make regresion_test command added - driver scripts to start without environment setting - comparison application with detailed output. - blessed dataset

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -16,6 +16,9 @@ add_subdirectory(performance)
 # Microbenchmarks.
 add_subdirectory(ubench)
 
+# regression / delta tests
+# Employing the full simulator. validated using deltas on output data
+add_subdirectory(regression)
 
 # modcc tests
 if(NOT use_external_modcc)
@@ -25,9 +28,6 @@ endif()
 
 # Proposed additional test types:
 
-# Large test, employing the full simulator. validated using deltas on output data
-
 # Test to check integration between components
-
 
 # Numbered tests based on bugs in the tracker
