--- a/tests/regression/scripts/validate.sh.in
+++ b/tests/regression/scripts/validate.sh.in
@@ -1,10 +1,10 @@
 #####################################################
 # Run nest with the standard settings, but output to file
 echo "running rgraph regression test"
-${CMAKE_BINARY_DIR}/miniapp/miniapp.exe -f 
+${CMAKE_BINARY_DIR}/miniapp/miniapp.exe -f ${REG_TEST_N_G}
 
 # Do a comparison
-python compare.py data/rgraph.gdf spikes_0.gdf 0.00001
+python compare.py data/rgraph.gdf spikes_0.gdf 0.01
 
 # set if we have a failure in the comparison
 if [ $? != 0 ]; then
@@ -12,15 +12,15 @@ if [ $? != 0 ]; then
 fi
 
 echo "running alltoall regression test"
-${CMAKE_BINARY_DIR}/miniapp/miniapp.exe -f -m
-python compare.py data/alltoall.gdf spikes_0.gdf 0.00001
+${CMAKE_BINARY_DIR}/miniapp/miniapp.exe -f -m ${REG_TEST_N_G}
+python compare.py data/alltoall.gdf spikes_0.gdf 0.01
 if [ $? != 0 ]; then
     ALLTOALL=1
 fi
 
 echo "running ring regression test"
-${CMAKE_BINARY_DIR}/miniapp/miniapp.exe -f -r
-python compare.py data/ring.gdf spikes_0.gdf 0.00001
+${CMAKE_BINARY_DIR}/miniapp/miniapp.exe -f -r ${REG_TEST_N_G}
+python compare.py data/ring.gdf spikes_0.gdf 0.01
 if [ $? != 0 ]; then
     RING=1
 fi
