--- a/tests/regression/CMakeLists.txt
+++ b/tests/regression/CMakeLists.txt
@@ -1,12 +1,14 @@
 # Configures and installs all files needed to perform
 # a full NestMC regression that validates generated spikes.
 
+# When running on a GPU we need to group the cell together 
 if(NMC_WITH_CUDA)
-    SET(REG_TEST_N_G "-g 1000")
+    # command line option to set the correct groupsize
+    # Will be used when configuring the validate script
+    SET(REG_TEST_N_G "-g 1000")  
 else()
     SET(REG_TEST_N_G "-g 1")
 endif()
-
 
 # Configure the bash script so it contains the correct absolute paths
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/scripts/validate.sh.in ${CMAKE_CURRENT_SOURCE_DIR}/scripts/validate.sh )
@@ -22,8 +24,7 @@ file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/data DESTINATION ${CMAKE_CURRENT_BINARY_DI
 
 # Add a the "make regression_test" command
 add_custom_target(regression_test
-${CMAKE_CURRENT_BINARY_DIR}/validate.sh 
-WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-COMMENT "Perform three NestMC runs with known output and compare" VERBATIM
+    ${CMAKE_CURRENT_BINARY_DIR}/validate.sh 
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+    COMMENT "Perform three NestMC runs with known output and compare" VERBATIM
 )
-
