--- a/mechanisms/CMakeLists.txt
+++ b/mechanisms/CMakeLists.txt
@@ -15,8 +15,7 @@ elseif(NMC_VECTORIZE_TARGET STREQUAL "AVX")
     set(modcc_opt "-O")
     set(modcc_target "cpu")
 elseif(NMC_VECTORIZE_TARGET STREQUAL "AVX2")
-    set(modcc_opt "-O")
-    set(modcc_target "cpu")
+    set(modcc_target "avx2")
 else()
     set(modcc_target "cpu")
 endif()
