AVX512 CMake target

--- a/mechanisms/CMakeLists.txt
+++ b/mechanisms/CMakeLists.txt
@@ -17,6 +17,8 @@ elseif(NMC_VECTORIZE_TARGET STREQUAL "AVX")
 elseif(NMC_VECTORIZE_TARGET STREQUAL "AVX2")
     set(modcc_opt "-O")
     set(modcc_target "cpu")
+    elseif(NMC_VECTORIZE_TARGET STREQUAL "AVX512")
+        set(modcc_target "avx512")
 else()
     set(modcc_target "cpu")
 endif()
