Issue/241 regular spiking source cell (#287)
Replace the 20 artificial spikes we inserted until now with spikes generated with a frequency spiking cell.
This is a cell that spikes regularly for a set period.
This connections outgoing from this cell mirror all the outgoing connections of cells with gid % 20 == 0.
This means that 5% extra connections have been added to the model to implement the equivalent behaviour with an 'implemented' neuron.

To implement this behavoir a new cell_group type has been introduced.
The fs_cell is extremely small and is not implemented on the backends.

Includes:
Unit test for the rss_cell functionality

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -16,6 +16,8 @@ add_subdirectory(performance)
 # Microbenchmarks.
 add_subdirectory(ubench)
 
+# regression / delta tests
+# Employing the full simulator. validated using deltas on output data
 
 # modcc tests
 if(NOT use_external_modcc)
@@ -25,9 +27,6 @@ endif()
 
 # Proposed additional test types:
 
-# Large test, employing the full simulator. validated using deltas on output data
-
 # Test to check integration between components
-
 
 # Numbered tests based on bugs in the tracker
