--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -40,6 +40,7 @@ set(TEST_SOURCES
     test_counter.cpp
     test_cycle.cpp
     test_domain_decomposition.cpp
+    test_dss_cell.cpp
     test_either.cpp
     test_event_queue.cpp
     test_event_binner.cpp
@@ -61,6 +62,7 @@ set(TEST_SOURCES
     test_probe.cpp
     test_segment.cpp
     test_range.cpp
+    test_rss_cell.cpp
     test_span.cpp
     test_spikes.cpp
     test_spike_store.cpp
