Refactor: new setup is working first test is green rename the files

--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -40,7 +40,7 @@ set(TEST_SOURCES
     test_counter.cpp
     test_cycle.cpp
     test_domain_decomposition.cpp
-    test_dss_cell.cpp
+    test_dss_cell_group.cpp
     test_either.cpp
     test_event_queue.cpp
     test_event_binner.cpp
