--- a/tests/global_communication/CMakeLists.txt
+++ b/tests/global_communication/CMakeLists.txt
@@ -5,7 +5,7 @@ set(COMMUNICATION_SOURCES
     test_domain_decomposition.cpp
     test_exporter_spike_file.cpp
     test_communicator.cpp
-    test_mpi_gather_all.cpp
+    test_mpi.cpp
 
     # unit test driver
     test.cpp
