Feature/node description (#325)
Refactor hardware-querying code.

Comprises part of the work on issue #318.

* Create `src/hardware` path for hardware-querying code.
* Create `nest::mc::hw` namespace for hardware-querying code.
* Move memory, affinity and power code from util and threading code to the new diretory and namespace.
* Add `nest::mc::threading::num_threads` function that attempts to determine the number of threads to use according to an environment variable, or by using the low level hardware querying if no environment variable is set.
* Add hardware query for counting the number of available GPUs.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(BASE_SOURCES
+    backends/multicore/fvm.cpp
     common_types_io.cpp
     cell.cpp
-    #cell_group_factory.cpp
     event_binner.cpp
     model.cpp
     morphology.cpp
@@ -11,14 +11,15 @@ set(BASE_SOURCES
     profiling/power_meter.cpp
     profiling/profiler.cpp
     swcio.cpp
-    threading/affinity.cpp
+    hardware/affinity.cpp
+    hardware/gpu.cpp
+    hardware/memory.cpp
+    hardware/power.cpp
+    threading/threading.cpp
     util/debug.cpp
     util/hostname.cpp
-    util/memory.cpp
     util/path.cpp
-    util/power.cpp
     util/unwind.cpp
-    backends/multicore/fvm.cpp
 )
 set(CUDA_SOURCES
     backends/gpu/fvm.cu
