--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.0)
 
 # project info
 project(cell_algorithms)
@@ -64,13 +64,31 @@ set(NMC_THREADING_MODEL "cthread" CACHE STRING "set the threading model, one of 
 set_property(CACHE NMC_THREADING_MODEL PROPERTY STRINGS cthread tbb serial )
 
 if(NMC_THREADING_MODEL MATCHES "tbb")
+    # download and build TBB
+    include(${CMAKE_SOURCE_DIR}/cmake/tbb/TBBGet.cmake)
+    include(${CMAKE_SOURCE_DIR}/cmake/tbb/TBBBuild.cmake)
+    tbb_get(TBB_ROOT tbb_root SOURCE_CODE)
+    tbb_build(TBB_ROOT ${tbb_root} CONFIG_DIR TBB_DIR)
 
-    find_package(TBB REQUIRED)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TBB_DEFINITIONS}")
+    # configure TBB
+    find_package(TBB REQUIRED tbb tbbmalloc)
+
     add_definitions(-DNMC_HAVE_TBB)
     set(NMC_WITH_TBB TRUE)
-    list(APPEND EXTERNAL_LIBRARIES ${TBB_LIBRARIES})
-    list(APPEND EXTERNAL_INCLUDES ${TBB_INCLUDE_DIRS})
+
+    # The TBB CMake package creates the TBB::tbb and TBB:tbbmalloc targets.
+    # The following should be sufficient, however on some systems (e.g. Cray PE),
+    # they don't work (because CMake is fragile):
+    #   list(APPEND EXTERNAL_LIBRARIES TBB::tbb)
+    #   list(APPEND EXTERNAL_LIBRARIES TBB::tbbmalloc)
+    # So, instead, manually add the library links:
+    set(TBB_LIB_PATH ${CMAKE_BINARY_DIR}/tbb_cmake_build/tbb_cmake_build_subdir_release)
+    list(APPEND EXTERNAL_LIBRARIES ${TBB_LIB_PATH}/libtbb.so)
+    list(APPEND EXTERNAL_LIBRARIES ${TBB_LIB_PATH}/libtbbmalloc.so)
+
+    # The TBB headers are in the downloaded TBB source
+    list(APPEND EXTERNAL_INCLUDES ${tbb_root}/include)
+
 elseif(NMC_THREADING_MODEL MATCHES "cthread")
 
     find_package(Threads REQUIRED)
@@ -126,7 +144,10 @@ set_property(CACHE NMC_SYSTEM_TYPE PROPERTY STRINGS Generic Cray BGQ )
 
 # Cray specific flags
 if(${NMC_SYSTEM_TYPE} MATCHES "Cray")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -dynamic")
+    # we no longer set the -dynamic flag for the compilere here, instead dynamic
+    # linking should be enabled by the user by setting the environment variable:
+    #   CRAYPE_LINK_TYPE=dynamic
+    #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -dynamic")
     add_definitions(-DNMC_HAVE_CRAY)
 endif()
 
