--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -270,4 +270,4 @@ add_subdirectory(src)
 add_subdirectory(tests)
 add_subdirectory(miniapp)
 add_subdirectory(lmorpho)
-add_subdirectory(docs)
+add_subdirectory(doc)
