--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,10 @@ env:
     # test mpi
     - BUILD_NAME=mpi      WITH_THREAD=cthread  WITH_DISTRIBUTED=mpi
 
+matrix:
+    allow_failures:
+        - env: WITH_THREAD=tbb
+
 before_install:
     - CC=gcc-5
     - CXX=g++-5
