--- a/.travis.yml
+++ b/.travis.yml
@@ -19,17 +19,14 @@ env:
     # test single node/rank with different threading back ends
     - BUILD_NAME=serial   WITH_THREAD=serial   WITH_DISTRIBUTED=serial
     - BUILD_NAME=cthread  WITH_THREAD=cthread  WITH_DISTRIBUTED=serial
-    - BUILD_NAME=tbb      WITH_THREAD=tbb      WITH_DISTRIBUTED=serial
+    # The tbb backend sometimes fails to build because CMake. Turn it off until our CMake TBB support is stable.
+    #- BUILD_NAME=tbb      WITH_THREAD=tbb      WITH_DISTRIBUTED=serial
     # test mpi
     - BUILD_NAME=mpi      WITH_THREAD=cthread  WITH_DISTRIBUTED=mpi
-
-matrix:
-    allow_failures:
-        - env: WITH_THREAD=tbb
 
 before_install:
     - CC=gcc-5
     - CXX=g++-5
 
-script: source ./scripts/travis/run_build.sh
+script: source ./scripts/travis/build.sh
 
