--- a/mechanisms/CMakeLists.txt
+++ b/mechanisms/CMakeLists.txt
@@ -3,10 +3,11 @@ include(BuildModules.cmake)
 # the list of built-in mechanisms to be provided by default
 set(mechanisms pas hh expsyn exp2syn test_kin1 test_kinlva)
 
-set(modcc_opt)
-
 set(mod_srcdir "${CMAKE_CURRENT_SOURCE_DIR}/mod")
 
+# Generate mechanism implementations for host/cpu environment
+
+set(modcc_opt)
 set(mech_dir "${CMAKE_CURRENT_SOURCE_DIR}/multicore")
 file(MAKE_DIRECTORY "${mech_dir}")
 if(NMC_VECTORIZE_TARGET STREQUAL "KNL")
@@ -26,25 +27,38 @@ build_modules(
     SOURCE_DIR "${mod_srcdir}"
     DEST_DIR "${mech_dir}"
     MODCC_FLAGS -t ${modcc_target} ${modcc_opt}
+    GENERATES .hpp
     TARGET build_all_mods
 )
 
-if(NMC_WITH_CUDA)
-    set(mech_dir "${CMAKE_CURRENT_SOURCE_DIR}/gpu")
-    file(MAKE_DIRECTORY "${mech_dir}")
-    build_modules(
-        ${mechanisms}
-        SOURCE_DIR "${mod_srcdir}"
-        DEST_DIR "${mech_dir}"
-        MODCC_FLAGS -t gpu ${modcc_opt}
-        TARGET build_all_gpu_mods
-    )
-    foreach(mech ${mechanisms})
-        set(CUDA_MECH_SOURCES ${CUDA_MECH_SOURCES} ./gpu/${mech}_impl.cu)
-    endforeach()
-    cuda_add_library(gpu_mechanisms ${CUDA_MECH_SOURCES})
-    add_dependencies(gpu_mechanisms build_all_gpu_mods)
-    list(APPEND NESTMC_LIBRARIES gpu_mechanisms)
-endif()
+# Generate mechanism implementations for gpu
 
-set(NESTMC_LIBRARIES "${NESTMC_LIBRARIES}" PARENT_SCOPE)
+set(mech_dir "${CMAKE_CURRENT_SOURCE_DIR}/gpu")
+file(MAKE_DIRECTORY "${mech_dir}")
+build_modules(
+    ${mechanisms}
+    SOURCE_DIR "${mod_srcdir}"
+    DEST_DIR "${mech_dir}"
+    MODCC_FLAGS -t gpu
+    GENERATES _impl.cu .hpp _impl.hpp
+    TARGET build_all_gpu_mods
+)
+
+# Make a library with the implementations of the mechanism kernels
+
+if(NMC_WITH_CUDA)
+    # make list of the .cu files that 
+    foreach(mech ${mechanisms})
+        set(cuda_mech_sources ${cuda_mech_sources} ${mech_dir}/${mech}_impl.cu)
+    endforeach()
+    # compile the .cu files into a library
+    cuda_add_library(gpu_mechanisms ${cuda_mech_sources})
+
+    # force recompilation on changes to modcc or the underlying .mod files
+    if (NMC_AUTO_RUN_MODCC_ON_CHANGES)
+        add_dependencies(gpu_mechanisms build_all_gpu_mods)
+    endif()
+
+    list(APPEND NESTMC_LIBRARIES gpu_mechanisms)
+    set(NESTMC_LIBRARIES "${NESTMC_LIBRARIES}" PARENT_SCOPE)
+endif()
